# MetaTeethCAD

./: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: STANDARD_JAW.ply
src-tauri/src/: api_handler.rs  converter.rs  db.rs  icp.rs  main.rs  submesh.rs
src/components/: FDIViewer.vue  Footer.vue  MeshPanel.vue  PreviewScene.vue  StepLine.vue  SubmmitForm.vue  ThreeScene.vue  ToolDial.vue
src/components/DatasetProducer/: DPStep1.vue  DPStepLine.vue
src/components/Forms/: Step1.vue  Step2.vue  Step3.vue  Step4.vue
src/router/: index.ts
src/scripts/: APIs.ts  MeshLoader.ts  MeshStore.ts  MeshTools.ts  utils.ts
src/views/: HomeView.vue  WorkStation.vue
src/views/workspaces/: EnamelDesigner.vue
src/views/workspaces/exps/: DatasetProducer.vue
