[package]
name = "BeauTee"
version = "0.0.4"
description = "BeauTee Lab"
authors = ["Team BeauTee"]
license = "MIT"
repository = "https://github.com/hx-w/tauri-practice"
default-run = "BeauTee"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0.116"
serde = { version = "1.0.200", features = ["derive"] }
tauri = { version = "1.6.7", features = ["api-all"] }
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json", "multipart"] }
obj-rs = "*"
ply-rs = { git = "https://github.com/Matthias-Fauconneau/ply-rs" }
url = "*"
once_cell = "1.10.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
