[package]
name = "MetaTeeth"
version = "0.0.4"
description = "MetaTeeth Lab"
authors = ["Team MetaTeeth"]
license = "MIT"
repository = "https://github.com/hx-w/tauri-practice"
default-run = "MetaTeeth"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0.116"
serde = { version = "1.0.200", features = ["derive"] }
tauri = { version = "1.6.7", features = ["api-all"] }
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json", "multipart"] }
ply-rs = { git = "https://github.com/Matthias-Fauconneau/ply-rs" }
obj-rs = "0.7.1"
stl_io = "0.7.0"
url = "*"
once_cell = "1.19.0"
kd-tree = { version = "0.6.0", features = ["nalgebra"] }
nalgebra = "0.32.4"
rerun = "0.17.0"
typenum = "1.17.0"
log = "0.4.21"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
